Refactorización y corrección de errores visuales
Se ha actualozado la estructuda de los datos (modelos) para usar Records

Se ha sincronizado el servicio de datos con los nuevos modelos y se han corregido métodos que faltaban/fallaban

Se ha solucionado el problema de amontonamiento de textos en el gráfico de lineas.

se ha unificado el contenido para que coincida con los cursos de la academia ficticia.